--- a/index.html
+++ b/index.html
@@ -2,8 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.jpg" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/logo.jpg" />
+
+    <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Basic Meta -->
+    <meta name="author" content="Samtech" />
+    <meta name="description" content="Samtech - Innovative technology solutions tailored for modern businesses." />
+    <meta name="keywords" content="Samtech, IT Services, Software Development, Web Solutions" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Samtech" />
+    <meta property="og:description" content="Innovative technology solutions tailored for modern businesses." />
+    <meta property="og:image" content="https://images.unsplash.com/photo-1522071820081-009f0129c71c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" />
+    <meta property="og:url" content="https://samueltech.netlify.app" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Samtech" />
+    <meta name="twitter:description" content="Innovative technology solutions tailored for modern businesses." />
+    <meta name="twitter:image" content="https://yoursite.com/logo.jpg" />
+
+    <!-- Title -->
     <title>Samtech</title>
   </head>
   <body>
